@@ -276,6 +276,22 @@ name|common
 operator|.
 name|cloud
 operator|.
+name|Replica
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
 name|Slice
 import|;
 end_import
@@ -5914,6 +5930,11 @@ operator|+
 name|onlyIfLeader
 argument_list|)
 expr_stmt|;
+name|int
+name|maxTries
+init|=
+literal|0
+decl_stmt|;
 name|String
 name|state
 init|=
@@ -6035,14 +6056,56 @@ decl_stmt|;
 if|if
 condition|(
 name|retry
-operator|==
+operator|%
 literal|15
-operator|||
-name|retry
 operator|==
-literal|60
+literal|0
 condition|)
 block|{
+if|if
+condition|(
+name|retry
+operator|>
+literal|0
+operator|&&
+name|log
+operator|.
+name|isInfoEnabled
+argument_list|()
+condition|)
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"After "
+operator|+
+name|retry
+operator|+
+literal|" seconds, core "
+operator|+
+name|cname
+operator|+
+literal|" ("
+operator|+
+name|cloudDescriptor
+operator|.
+name|getShardId
+argument_list|()
+operator|+
+literal|" of "
+operator|+
+name|cloudDescriptor
+operator|.
+name|getCollectionName
+argument_list|()
+operator|+
+literal|") still does not have state: "
+operator|+
+name|waitForState
+operator|+
+literal|"; forcing ClusterState update from ZooKeeper"
+argument_list|)
+expr_stmt|;
 comment|// force a cluster state update
 name|coreContainer
 operator|.
@@ -6055,6 +6118,73 @@ operator|.
 name|updateClusterState
 argument_list|(
 literal|true
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|maxTries
+operator|==
+literal|0
+condition|)
+block|{
+comment|// wait long enough for the leader conflict to work itself out plus a little extra
+name|int
+name|conflictWaitMs
+init|=
+name|coreContainer
+operator|.
+name|getZkController
+argument_list|()
+operator|.
+name|getLeaderConflictResolveWait
+argument_list|()
+decl_stmt|;
+name|maxTries
+operator|=
+operator|(
+name|int
+operator|)
+name|Math
+operator|.
+name|round
+argument_list|(
+name|conflictWaitMs
+operator|/
+literal|1000
+argument_list|)
+operator|+
+literal|3
+expr_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"Will wait a max of "
+operator|+
+name|maxTries
+operator|+
+literal|" seconds to see "
+operator|+
+name|cname
+operator|+
+literal|" ("
+operator|+
+name|cloudDescriptor
+operator|.
+name|getShardId
+argument_list|()
+operator|+
+literal|" of "
+operator|+
+name|cloudDescriptor
+operator|.
+name|getCollectionName
+argument_list|()
+operator|+
+literal|") have state: "
+operator|+
+name|waitForState
 argument_list|)
 expr_stmt|;
 block|}
@@ -6229,9 +6359,84 @@ condition|(
 name|retry
 operator|++
 operator|==
-literal|120
+name|maxTries
 condition|)
 block|{
+name|String
+name|collection
+init|=
+literal|null
+decl_stmt|;
+name|String
+name|leaderInfo
+init|=
+literal|null
+decl_stmt|;
+name|String
+name|shardId
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|CloudDescriptor
+name|cloudDescriptor
+init|=
+name|core
+operator|.
+name|getCoreDescriptor
+argument_list|()
+operator|.
+name|getCloudDescriptor
+argument_list|()
+decl_stmt|;
+name|collection
+operator|=
+name|cloudDescriptor
+operator|.
+name|getCollectionName
+argument_list|()
+expr_stmt|;
+name|shardId
+operator|=
+name|cloudDescriptor
+operator|.
+name|getShardId
+argument_list|()
+expr_stmt|;
+name|leaderInfo
+operator|=
+name|coreContainer
+operator|.
+name|getZkController
+argument_list|()
+operator|.
+name|getZkStateReader
+argument_list|()
+operator|.
+name|getLeaderUrl
+argument_list|(
+name|collection
+argument_list|,
+name|shardId
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|exc
+parameter_list|)
+block|{
+name|leaderInfo
+operator|=
+literal|"Not available due to: "
+operator|+
+name|exc
+expr_stmt|;
+block|}
 throw|throw
 operator|new
 name|SolrException
@@ -6246,6 +6451,14 @@ name|waitForState
 operator|+
 literal|" for "
 operator|+
+name|shardId
+operator|+
+literal|" in "
+operator|+
+name|collection
+operator|+
+literal|" on "
+operator|+
 name|nodeName
 operator|+
 literal|" but I still do not see the requested state. I see state: "
@@ -6255,6 +6468,10 @@ operator|+
 literal|" live:"
 operator|+
 name|live
+operator|+
+literal|" leader from ZK: "
+operator|+
+name|leaderInfo
 argument_list|)
 throw|;
 block|}
@@ -6289,7 +6506,6 @@ condition|)
 block|{
 try|try
 block|{
-empty_stmt|;
 name|LocalSolrQueryRequest
 name|r
 init|=
